# ai-git

./: .gitignore  CLAUDE.md  Cargo.toml  MVP.md  README.md  RESEARCH.md  TECH_STACK.md  package.json  pnpm-lock.yaml
.claude/commands/: aig.md
.github/workflows/: ci.yml  deploy-pages.yml  release.yml
crates/aig-core/: Cargo.toml  README.md
crates/aig-core/src/: bundle.rs  capture.rs  checkpoint.rs  db.rs  diff.rs  git_interop.rs  import.rs  intent.rs  lib.rs  main.rs  repair.rs  session.rs  storage.rs  sync.rs  watch.rs
crates/aig-core/tests/: integration.rs
crates/aig-treesitter/: Cargo.toml  README.md
crates/aig-treesitter/src/: lib.rs
docs/: comparison.md  index.md  package.json  related-tools.md  research.md  roadmap.md  tech-stack.md
docs/.vitepress/: config.ts
docs/.vitepress/theme/: custom.css  index.ts
docs/.vitepress/theme/components/: BlameCompare.vue  CheckpointDemo.vue  CtaInstall.vue  HeroTerminal.vue  Layout.vue  LogCompare.vue  TerminalCompare.vue  TrustBar.vue
docs/guide/: claude-code.md  cli-reference.md  daily-workflow.md  getting-started.md  index.md  migration.md
scripts/: generate-docs.sh  install.ps1  install.sh
