[package]
name = "aig-treesitter"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[lib]
name = "aig_treesitter"
path = "src/lib.rs"

[dependencies]
tree-sitter = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-go = "0.23"
serde = { version = "1", features = ["derive"] }
anyhow = "1"
