[package]
name = "aig-treesitter"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[lib]
name = "aig_treesitter"
path = "src/lib.rs"

[dependencies]
tree-sitter = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-php = "0.24"
tree-sitter-kotlin-ng = "1"
tree-sitter-swift = "0.7"
tree-sitter-c = "0.24"
tree-sitter-css = "0.25"
tree-sitter-html = "0.23"
tree-sitter-json = "0.24"
tree-sitter-yaml = "0.7"
tree-sitter-toml-ng = "0.7"
tree-sitter-bash = "0.25"
tree-sitter-lua = "0.5"
tree-sitter-scala = "0.25"
tree-sitter-elixir = "0.3"
tree-sitter-haskell = "0.23"
tree-sitter-zig = "1"
tree-sitter-dart = "0.1"
tree-sitter-md = "0.5"
serde = { version = "1", features = ["derive"] }
anyhow = "1"
